# lattice

./: .gitignore  404.html  LICENSE  README.md  gallery.html  generate_lattice_html.py  index.html  lattice.html  lattice.json  markdown-page.html  pyproject.toml  sitemap.xml
assets/css/: styles.acb8a622.css
assets/js/: 0056a6ba.3f4f83db.js  0056a6ba.67b2eaed.js  0e384e19.5ba8feee.js  1df93b7f.9e98b6e4.js  1df93b7f.ad74a975.js  1df93b7f.b3073f5f.js  1df93b7f.da6c2f11.js  242d11c4.1e6f2169.js  242d11c4.5b55c38a.js  33fc5bb8.6353a7aa.js  34facdea.1a78903d.js  40985d82.3cf91d70.js  4a6cf258.d78b59e4.js  4c678320.b11b2470.js  621db11d.630fec58.js  7180d3e2.9ae6bb2e.js  726.36540dc8.js  7d556b70.54a28891.js  7d556b70.afebcfc5.js  804b58ce.5014cc86.js  814f3328.3415fa0c.js  84e6e3ec.2ec826bb.js  84e6e3ec.b9017a2d.js  91039464.46dd1609.js  91039464.cdeca75a.js  a2ae77c5.49b8d8e5.js  a2ae77c5.91e8e6a6.js  a6aa9e1f.fd86e13e.js  abfd353c.4305b2f3.js  abfd353c.77b44573.js  acecf23e.f4af8d4a.js  c279941b.094b7791.js  cc7558ea.491abb3f.js  ccc49370.bbd9ce45.js  d21172ea.897757cc.js  d71e2cc5.5b1ecf9c.js  d71e2cc5.eb7c6373.js  (+7 more)
docs/: index.html  intro.html
example_data/: example_chat_lattice.json
examples/: chat.ipynb  claude_code.ipynb  claude_code_lattice.json  claude_lattice.json  lattice.json  tada.py  visualize.html
gallery/: archive.html  atom.xml  authors.html  dawn.html  rss.xml
tests/: Untitled  example.yaml  lattice.json  test_data.py  test_lattice.py  test_observations.py
website/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
(+51 files in other folders)
